data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1040.wast
;; Sure, here's a list of 10 unique differential test descriptions for Unreachable Code Execution based on the differences in code implementations for the `unreachable` instruction in WebAssembly and wizard_engine:  1. **Basic Unreachable Test:**    - **Description:** Insert an `unreachable` instruction after a simple `i32.const 0` and ensure it causes a trap. This test checks if reaching `unreachable` immediately causes a trap.    - **Constraint:** Tests the immediate trapping behavior of `unreachable`.    - **Relation to Unreachable Code Execution:** Verifies that no subsequent instructions are executed after `unreachable`.

(assert_invalid
  (module (func $basic-unreachable-test
    (i32.const 0)
    (unreachable)
    (i32.const 1)
  ))
  "unreachable executed"
)